--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "airbnb"
+    ],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "rules": {
+      "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
+      "react/prop-types": "off",
+      "react/jsx-props-no-spreading": ["error", {
+        "html": "ignore" ,
+        "custom": "ignore" ,
+        "exceptions": [""]
+        }],
+        "react/react-in-jsx-scope": "off"
+    }
 }
