--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
+    "@material-ui/core": "^4.12.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
