fix lint and prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
+  "printWidth": 120,
+  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "endOfLine": "auto"
+  "useTabs": false,
+  "rubySingleQuote": true
 }
