--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.5.1",
     "moment": "^2.29.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "17.0.2"
