--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "@prisma/client": "^3.11.1",
     "moment": "^2.29.1",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
@@ -34,6 +35,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "prisma": "^3.11.1"
   }
 }
