--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=B6A8dqgfcaM0FuKR+FE3GhN8cOcFjcKJGk7A5Hk9ZQA=
 VERCEL_URL=https://hatomic-git-master-tmedrado.vercel.app/
 DATABASE_URL="postgresql://postgres:docker@localhost:5432/postgres-db?schema=public"
+NEXTAUTH_URL=http://localhost:3000
