--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
     "moment": "^2.29.1",
     "next": "12.1.0",
