--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.5.1",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
+    "axios": "^0.26.1",
     "moment": "^2.29.1",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
