--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.1",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
+    "next-pwa": "^5.5.0",
     "react": "17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "17.0.2"
